--- a/static/user/css/style.css
+++ b/static/user/css/style.css
@@ -721,7 +721,7 @@ a.mask {
     left: 16px;
 }
 .srch span {
-    background: #73B6E1;
+    background: #df4242;
     color: #fff;
     font-size: 15px;
     font-weight: 400;
