--- a/assets/user/css/style.css
+++ b/assets/user/css/style.css
@@ -704,7 +704,7 @@ a.mask {
     -ms-transition: 0.5s all ease;
 }
 .product-left:hover .product-main{
-	border:1px solid #e17373;
+	border:1px solid #73B6E1;
 	transition: 0.5s all ease;
     -webkit-transition: 0.5s all ease;
     -moz-transition: 0.5s all ease;
@@ -721,7 +721,7 @@ a.mask {
     left: 16px;
 }
 .srch span {
-    background: #f15f5f;
+    background: #df4242;
     color: #fff;
     font-size: 15px;
     font-weight: 400;
@@ -816,7 +816,7 @@ a.mask {
     color: #999;
 }
 .infor-left p a:hover{
-	color: #e66a6a;
+	color: #73B6E1;
 	text-decoration:none;
 }
 .infor-left p {
@@ -858,7 +858,7 @@ a.mask {
 .footer-left input[type=submit]:hover{
     background: #73B6E1;
 	color:#fff;
-	border: 1px solid #e76868;
+	border: 1px solid #73B6E1;
 	transition: 0.5s all;
 	-webkit-transition: 0.5s all;
 	-o-transition: 0.5s all;
@@ -880,7 +880,7 @@ a.mask {
 	color: #000;
 }
 .footer-right p a:hover{
-	color: #eb6868;
+	color: #73B6E1;
 	text-decoration:none;
 }
 /*--footer-end--*/
@@ -903,7 +903,7 @@ a.mask {
 	padding: 14px;
 }
 .w_nav2 li a.color1{
-	background:	#e20a0a;
+	background:	#0AA5E2;
 }
 .w_nav2 li a.color2{
 	background:	#40E0D0;
